--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Your website description goes here.">
 </head>
 <body>
-    <h1>Your Website Title</h1>
-    <p>Your website description goes here.</p>
+    <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
+    <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย<br>ตอบ</p>
 </body>
 </html>
