--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
     <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย<br>ตอบ</p>
+    <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย<br>ตอบ</p>
+    <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย<br>ตอบ</p>
+    <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย<br>ตอบ</p>
 </body>
 </html>
