--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย<br>ตอบ</p>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย<br>ตอบ</p>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย<br>ตอบ</p>
+    <h1>แบบฝึกหัดท้ายบทที่ 2</h1>
+    <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย<br>ตอบ</p>
+    <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย<br>ตอบ</p>
+    <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย<br>ตอบ</p>
+    <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร<br>ตอบ</p>
 </body>
 </html>
