--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Your Website Title</title>
     <meta name="description" content="Your website description goes here.">
 </head>
+
+p {
+    font-family: 'Ubuntu', sans-serif; /* Set the font-family to Ubuntu */
+    font-weight: bold; /* Set the text to normal weight (not bold) */
+        margin: 5px 0; /* Adjust the top and bottom margin as needed */
+}
+
 <body>
     <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
     <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย<br>ตอบ</p>
