--- a/index.html
+++ b/index.html
@@ -15,14 +15,53 @@ p {
 
 <body>
     <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
-    <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย<br>ตอบ</p>
-    <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย<br>ตอบ</p>
-    <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย<br>ตอบ</p>
-    <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย<br>ตอบ</p>
+    <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    
     <h1>แบบฝึกหัดท้ายบทที่ 2</h1>
-    <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย<br>ตอบ</p>
-    <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย<br>ตอบ</p>
-    <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย<br>ตอบ</p>
-    <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร<br>ตอบ</p>
+    <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย</p>
+    <p1>ตอบ</p1>
+    <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร</p>
+    <p1>ตอบ</p1>
+
+    <h1>แบบฝึกหัดท้ายบทที่ 3</h1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+
+    <h1>แบบฝึกหัดท้ายบทที่ 4</h1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+
+    <h1>แบบฝึกหัดท้ายบทที่ 5</h1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
+    <p></p>
+    <p1>ตอบ</p1>
 </body>
 </html>
