--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
     <meta name="description" content="Your website description goes here.">
-
-    p {
-    font-family: 'Ubuntu', sans-serif; /* Set the font-family to Ubuntu */
-    font-weight: bold; /* Set the text to normal weight (not bold) */
-        margin: 5px 0; /* Adjust the top and bottom margin as needed */
-}
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
