--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <p1>ตอบ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 3</h1>
-    <p></p>
+    <p>1. นิกายเถรวาทและมหายานแตกต่างกันอย่างไร จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>2. จงอธิบายความหมายของไตรลักษณ์ จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>3. คำสอนของพระพุทธเจ้าขัดแย้งกับคำสอนของศาสนาพราหมณ์-ฮินดูในเรื่องใด จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>4. นิกายศาสนาพุทธเกิดขึ้นมาจากสาเหตุใด จงอธิบาย</p>
     <p1>ตอบ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 4</h1>
