--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <p1>ตอบ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 4</h1>
-    <p></p>
+    <p>1. ชาวคริสต์มีความเชื่อเกี่ยวกับพระเยซูคริสต์อย่างไร จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>2. พระเยซูทรงสอนคริสต์ศาสนิกชนของพระองค์อย่างชัดเจนในเรื่องใด จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>3. ศีลล้างบาป มีลักษณะอย่างไร จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>4. นิกายโปรแตสแตนท์เกิดขึ้นเพราะเหตุผลใด จงอธิบาย</p>
     <p1>ตอบ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 5</h1>
