--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <p1>ตอบ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 5</h1>
-    <p></p>
+    <p>1. จุดมุ่งหมายของการถือศีลอดในศาสนาอิสลามคืออะไร จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>2. ศาสนาอิสลามแตกต่างจากศาสนาอื่นอย่างไร จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>3. หลักศรัทธาในศาสนาอิสลามมีกประการ จงอธิบาย</p>
     <p1>ตอบ</p1>
-    <p></p>
+    <p>4. หลักปฏิบัติในศาสนาอิสลามมีที่ประการ จงอธิบาย</p>
     <p1>ตอบ</p1>
 </body>
 </html>
