--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
     <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1>ตอบ: ศาสนาช่วยให้มนุษย์มีความหมายในชีวิต และสร้างสันติสุขในจิตใจ</p1>
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
     <p1>ตอบ</p1>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
