--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website Title</title>
+    <title>สังคมม.4 เทอม 2</title>
     <meta name="description" content="Your website description goes here.">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
