--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย</p>
     <p1>ตอบ: ศาสนาช่วยให้มนุษย์มีความหมายในชีวิต และสร้างสันติสุขในจิตใจ</p1>
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1>ตอบ: การทำความดีและเอาใจใส่ต่อผู้อื่น</p1>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
     <p1>ตอบ</p1>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
