--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
     <p1>ตอบ: การทำความดีและเอาใจใส่ต่อผู้อื่น</p1>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1>ตอบ: ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>     ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
     <p1>ตอบ</p1>
     
