--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
     <p1>ตอบ: ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>     ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1>ตอบ: ทุกศาสนามีความสอดคล้องกันในการมุ่งหมายสูงสุดของชีวิตเนื่องจากมุมมองเชื่อมโยงกับความสุขและความสงบสุขในชีวิต ซึ่งเป็นความตั้งใจที่มนุษย์ต้องการให้เกิดขึ้นในชีวิตประจำวันของพวกเขา</p1>
     
     <h1>แบบฝึกหัดท้ายบทที่ 2</h1>
     <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย</p>
