--- a/index.html
+++ b/index.html
@@ -11,33 +11,33 @@
 <body>
     <h1>แบบฝึกหัดท้ายบทที่ 1</h1>
     <p>1. ศาสนามีประโยชน์ต่อมนุษย์อย่างไร จงอธิบาย</p>
-    <p1>ตอบ: ศาสนาช่วยให้มนุษย์มีความหมายในชีวิต และสร้างสันติสุขในจิตใจ</p1>
+    <p1>ศาสนาช่วยให้มนุษย์มีความหมายในชีวิต และสร้างสันติสุขในจิตใจ</p1>
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
-    <p1>ตอบ: การทำความดีและเอาใจใส่ต่อผู้อื่น</p1>
+    <p1>การทำความดีและเอาใจใส่ต่อผู้อื่น</p1>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
-    <p1>ตอบ: ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>     ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
+    <p1>ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>     ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
-    <p1>ตอบ: ทุกศาสนามีความสอดคล้องกันในการมุ่งหมายสูงสุดของชีวิตเนื่องจากมุมมองเชื่อมโยงกับความสุขและความสงบสุขในชีวิต ซึ่งเป็นความตั้งใจที่มนุษย์ต้องการให้เกิดขึ้นในชีวิตประจำวันของพวกเขา</p1>
+    <p1>ทุกศาสนามีความสอดคล้องกันในการมุ่งหมายสูงสุดของชีวิตเนื่องจากมุมมองเชื่อมโยงกับความสุขและความสงบสุขในชีวิต ซึ่งเป็นความตั้งใจที่มนุษย์ต้องการให้เกิดขึ้นในชีวิตประจำวันของพวกเขา</p1>
     
     <h1>แบบฝึกหัดท้ายบทที่ 2</h1>
     <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย</p>
-    <p1>ตอบ: ตามความเชื่อทางศาสนาพราหมณ์ถือเอาเชื้อชาติเป็นเกณฑ์ในการแบ่ง คนเกิดใน วรรณะใดจะมีสิทธิและแนวทางดำเนินชีวิตตามหลักคำสอนที่ได้วางไว้โดยขัดขื่น ไม่ได้ระบบวรรณะนั้นชาวอินเดียถือว่ากำหนดไว้ตายตัวโดยพระผู้เป็นเจ้า การเปลี่ยนแปลงสภาพทางสังคม</p1>
+    <p1>ตามความเชื่อทางศาสนาพราหมณ์ถือเอาเชื้อชาติเป็นเกณฑ์ในการแบ่ง คนเกิดใน วรรณะใดจะมีสิทธิและแนวทางดำเนินชีวิตตามหลักคำสอนที่ได้วางไว้โดยขัดขื่น ไม่ได้ระบบวรรณะนั้นชาวอินเดียถือว่ากำหนดไว้ตายตัวโดยพระผู้เป็นเจ้า การเปลี่ยนแปลงสภาพทางสังคม</p1>
     <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
     <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
     <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 3</h1>
     <p>1. นิกายเถรวาทและมหายานแตกต่างกันอย่างไร จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
     <p>2. จงอธิบายความหมายของไตรลักษณ์ จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
     <p>3. คำสอนของพระพุทธเจ้าขัดแย้งกับคำสอนของศาสนาพราหมณ์-ฮินดูในเรื่องใด จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
     <p>4. นิกายศาสนาพุทธเกิดขึ้นมาจากสาเหตุใด จงอธิบาย</p>
-    <p1>ตอบ</p1>
+    <p1></p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 4</h1>
     <p>1. ชาวคริสต์มีความเชื่อเกี่ยวกับพระเยซูคริสต์อย่างไร จงอธิบาย</p>
