--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>2. ศาสนาทุกศาสนาสอนตรงกันในข้อใด จงอธิบาย</p>
     <p1>การทำความดีและเอาใจใส่ต่อผู้อื่น</p1>
     <p>3. คำว่า "ลัทธิและศาสนา" มีความเหมือนและแตกต่างกันอย่างไร จงอธิบาย</p>
-    <p1>ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>     ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
+    <p1>- ลัทธิ มักมีความเชื่อที่มีเหตุผลและมุ่งเน้นที่ด้านสังคมหรือการเมือง<br>- ศาสนา มักมีมิติทางจิตวิทยาและมุ่งเน้นที่ด้านจริยธรรมและความเชื่อในเทพเจ้าหรือบรรพบุรุษ</p1>
     <p>4. เพราะเหตุใดทุกศาสนาจึงมีความสอดคล้องกันในเรื่องจุดมุ่งหมายสูงสุดของชีวิต จงอธิบาย</p>
     <p1>ทุกศาสนามีความสอดคล้องกันในการมุ่งหมายสูงสุดของชีวิตเนื่องจากมุมมองเชื่อมโยงกับความสุขและความสงบสุขในชีวิต ซึ่งเป็นความตั้งใจที่มนุษย์ต้องการให้เกิดขึ้นในชีวิตประจำวันของพวกเขา</p1>
     
@@ -25,7 +25,7 @@
     <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย</p>
     <p1>อาศรม 4 ในศาสนาพราหมณ์-ฮินดู เป็นการเฉลิมฉลองที่มีไว้เพื่อระลึกถึงเหตุการณ์สำคัญ 4 อย่างในชีวิตของบราห์มัน ซึ่งคือการเกิด, การสงบนอน, การรวมตัว, และการออกจากทรัพย์สินโลก</p1>
     <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย</p>
-    <p1></p1>
+    <p1>การบวชสันยาสีมีจุดมุ่งหมายเพื่อทำให้ผู้ศึกษาพัฒนาตัวเองในทางศีลธรรมและจิตใจอย่างเต็มที่</p1>
     <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร</p>
     <p1></p1>
 
