--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย</p>
     <p1>การบวชสันยาสีมีจุดมุ่งหมายเพื่อทำให้ผู้ศึกษาพัฒนาตัวเองในทางศีลธรรมและจิตใจอย่างเต็มที่</p1>
     <p>4. ตามทรรศนะของศาสนาพราหมณ์-ฮินดู อะไรเป็นสาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิด ในวัฏสงสาร</p>
-    <p1></p1>
+    <p1>ตามทรรศนะของศาสนาพราหมณ์-ฮินดู สาเหตุสำคัญที่สุดที่ทำให้คนต้องเวียนว่ายตายเกิดในวัฏสงสารคือการกระทำที่ผิดต่อธรรมและการกระทำที่เป็นอันตรายต่อชีวิตและสุขภาพ</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 3</h1>
     <p>1. นิกายเถรวาทและมหายานแตกต่างกันอย่างไร จงอธิบาย</p>
