--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>2. จงอธิบายความหมายของไตรลักษณ์ จงอธิบาย</p>
     <p1>ไตรลักษณ์ในศาสนาพุทธหมายถึงพระพุทธเจ้า, พระธรรม, และสงฆ์</p1>
     <p>3. คำสอนของพระพุทธเจ้าขัดแย้งกับคำสอนของศาสนาพราหมณ์-ฮินดูในเรื่องใด จงอธิบาย</p>
-    <p1></p1>
+    <p1>คำสอนของพระพุทธเจ้าและศาสนาพราหมณ์-ฮินดูแตกต่างกันในเรื่องการนับถือพระและพิธีการ</p1>
     <p>4. นิกายศาสนาพุทธเกิดขึ้นมาจากสาเหตุใด จงอธิบาย</p>
     <p1></p1>
 
