--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <p>3. คำสอนของพระพุทธเจ้าขัดแย้งกับคำสอนของศาสนาพราหมณ์-ฮินดูในเรื่องใด จงอธิบาย</p>
     <p1>คำสอนของพระพุทธเจ้าและศาสนาพราหมณ์-ฮินดูแตกต่างกันในเรื่องการนับถือพระและพิธีการ</p1>
     <p>4. นิกายศาสนาพุทธเกิดขึ้นมาจากสาเหตุใด จงอธิบาย</p>
-    <p1></p1>
+    <p1>นิกายศาสนาพุทธเกิดขึ้นมาจากการระเบิดความรู้ของผู้บริสุทธิ์ต่อความทุกข์โทษและการเจริญอย่างสง่างามในวิถีการใช้ชีวิตที่อิสระและที่สงบสุข</p1>
 
     <h1>แบบฝึกหัดท้ายบทที่ 4</h1>
     <p>1. ชาวคริสต์มีความเชื่อเกี่ยวกับพระเยซูคริสต์อย่างไร จงอธิบาย</p>
