--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <h1>แบบฝึกหัดท้ายบทที่ 2</h1>
     <p>1. ความคิดเรื่องวรรณะพราหมณ์-ฮินดู มีลักษณะอย่างไร จงอธิบาย</p>
-    <p1>ตามความเชื่อทางศาสนาพราหมณ์ถือเอาเชื้อชาติเป็นเกณฑ์ในการแบ่ง คนเกิดใน วรรณะใดจะมีสิทธิและแนวทางดำเนินชีวิตตามหลักคำสอนที่ได้วางไว้โดยขัดขื่น ไม่ได้ระบบวรรณะนั้นชาวอินเดียถือว่ากำหนดไว้ตายตัวโดยพระผู้เป็นเจ้า การเปลี่ยนแปลงสภาพทางสังคม</p1>
+    <p1>ตามความเชื่อทางศาสนาพราหมณ์ถือเอาเชื้อชาติเป็นเกณฑ์ในการแบ่ง คนเกิดใน วรรณะใดจะมีสิทธิและแนวทางดำเนินชีวิตตามหลักคำสอนที่ได้วางไว้โดยขัดขื่นไม่ได้</p1>
     <p>2. อาศรม 4 ของศาสนาพราหมณ์-ฮินดู มีไว้เพื่ออะไร จงอธิบาย</p>
     <p1>อาศรม 4 ในศาสนาพราหมณ์-ฮินดู เป็นการเฉลิมฉลองที่มีไว้เพื่อระลึกถึงเหตุการณ์สำคัญ 4 อย่างในชีวิตของบราห์มัน ซึ่งคือการเกิด, การสงบนอน, การรวมตัว, และการออกจากทรัพย์สินโลก</p1>
     <p>3. จุดมุ่งหมายของการบวชสันยาสี คืออย่างไร จงอธิบาย</p>
