--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <h1>แบบฝึกหัดท้ายบทที่ 3</h1>
     <p>1. นิกายเถรวาทและมหายานแตกต่างกันอย่างไร จงอธิบาย</p>
-    <p1>นิกายเถรวาท เป็นหนึ่งในสาขาหลักของศาสนาพราหมณ์-ฮินดู มีการยึดถือต่อพระพุทธเจ้าและวิธีการฝึกฝนตามลำดับแบบที่พระพุทธเจ้าเองปฏิบัติเมื่อตกอับสมอง<br>นิกายมหายาน เน้นการสร้างบำรุงคุณธรรมและการช่วยเหลือส่วนรวม</p1>
+    <p1>-นิกายเถรวาท เป็นหนึ่งในสาขาหลักของศาสนาพราหมณ์- ฮินดู มีการยึดถือต่อพระพุทธเจ้าและวิธีการฝึกฝนตามลำดับแบบที่พระพุทธเจ้าเองปฏิบัติเมื่อตกอับสมอง<br>- นิกายมหายาน เน้นการสร้างบำรุงคุณธรรมและการช่วยเหลือส่วนรวม</p1>
     <p>2. จงอธิบายความหมายของไตรลักษณ์ จงอธิบาย</p>
     <p1>ไตรลักษณ์ในศาสนาพุทธหมายถึงพระพุทธเจ้า, พระธรรม, และสงฆ์</p1>
     <p>3. คำสอนของพระพุทธเจ้าขัดแย้งกับคำสอนของศาสนาพราหมณ์-ฮินดูในเรื่องใด จงอธิบาย</p>
