--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>สังคมม.4 เทอม 2</title>
-    <meta name="description" content="Your website description goes here.">
+    <meta name="description" content="ไม่มีไร">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
