--- a/index.html
+++ b/index.html
@@ -60,4 +60,9 @@
     <p>4. หลักปฏิบัติในศาสนาอิสลามมีที่ประการ จงอธิบาย</p>
     <p1>ตอบ</p1>
 </body>
+
+    <footer>
+        <p>ชอบอันวาอ่ะทำไงดี</p>
+    </footer>
+
 </html>
